# population-error

./: .gitignore  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/examples/: gwpopulation.ipynb  weights_array.ipynb
docs/examples/data/: GWTC3_injections.h5
population_error/: statistics.py
